<resources>
    <string name="app_name">Donation 3.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="donateButton">DONATE</string>
    <string name="paypal">Paypal</string>
    <string name="direct">Direct</string>
    <string name="donateTitle">Welcome homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="titleTotalSoFar">Total so Far:</string>
    <string name="titlePaymentAmount">Amount</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>
</resources>